@@ -89,6 +89,9 @@ ANSI_COLORS = {
     "cyan": "36",
     "white": "37",
 }
+PRINT_AS_EMPTY_STRING = {"end_line", "end_column"}
+"""Set of Message attributes that should be printed as an
+empty string when they are None"""
 
 
 def _get_ansi_code(msg_style: MessageStyle) -> str:
@@ -177,6 +180,8 @@ class TextReporter(BaseReporter):
     __implements__ = IReporter
     name = "text"
     extension = "txt"
+    # pylint: disable=fixme
+    # TODO: Add end_line and end_column to standard line format of TextReporter
     line_format = "{path}:{line}:{column}: {msg_id}: {msg} ({symbol})"
 
     def __init__(self, output: Optional[TextIO] = None) -> None:
@@ -189,7 +194,13 @@ class TextReporter(BaseReporter):
 
     def write_message(self, msg: Message) -> None:
         """Convenience method to write a formatted message with class default template"""
-        self.writeln(msg.format(self._template))
+        self_dict = msg._asdict()
+        for key, value in self_dict.items():
+            # pylint: disable=fixme
+            # TODO: Add column to list of attributes to be printed as an empty string
+            if value is None and key in PRINT_AS_EMPTY_STRING:
+                self_dict[key] = ""
+        self.writeln(self._template.format(**self_dict))
 
     def handle_message(self, msg: Message) -> None:
         """manage message of different type and in the context of path"""
